[package]
name = "jh-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
anyhow_ext = "0.2.1"
async-std = "1.12.0"
chrono = "0.4.38"
concat-string = "1.0.1"
derive_builder = "0.20.0"
hex = "0.4.3"
rust-crypto = "0.2.36"
serde = { version = "1.0.202", features = ["derive"] }
serde-xml-rs = "0.6.0"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls", "rustls_crate", "encoding"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
url-escape = "0.1.1"
